Move hextant-sample to own repository and fix some problems with from source installation